--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "adamwathan/eloquent-oauth-l5": "^0.5.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "yoeunes/toastr": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
